--- a/tugas1.html
+++ b/tugas1.html
@@ -8,15 +8,15 @@
 <body>
     <h1>X RPL 7</h1>
     <ol type="1">
-        <li>Jasmine</li>
+        <li> <h3>Jasmine</h3></li>
         <img src="jasmine.jpeg" alt="fotoj" width="200" height="300">
-        <li>Hasna</li>
+        <li><h3>Hasna</h3></li>
         <img src="hasna.jpeg" alt="fotoh"width="200" height="300">
-        <li>Grisli</li>
+        <li><h3>Grisli</h3></li>
         <img src="grisli.jpeg" alt="fotog"width="200" height="300">
-        <li>Zizi</li>
+        <li><h3>Zizi</h3></li>
         <img src="zizi.jpeg" alt="fotoz"width="200" height="300">
-        <li>Bryan</li>
+        <li><h3>Bryan</h3></li>
         <img src="bryan.jpeg" alt="fotob"width="200" height="300">
     </ol>
 </body>
